# celery_bug_1

./: .gitignore  Taskfile.yml  conftest.py  manage.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
package/: conftest.py
package/packagedjintegration/: apps.py  models.py  tasks.py  utils.py
package/packagedjintegration/migrations/: 0001_initial.py
package/tests/: test_db.py
testdjangoapp/: asgi.py  celery.py  settings.py  wsgi.py
testdjangoapp/exampleapp/: apps.py  views.py
