[tool.poetry]
name = "packagename"
version = "0.1.0"
description = ""
authors = ["andrei.novoselov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.*"
pydantic = "^1.10.5"
django = "^4.1.7"
celery = {extras = ["redis"], version = "^5.2.7"}
psycopg2-binary = "^2.9.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^23.1.0"
isort = "^5.12.0"
autoflake = "^2.0.1"
django-stubs = {extras = ["compatible-mypy"], version = "^1.14.0"}
celery-types = "^0.14.0"
types-redis = "^4.5.1.1"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"